dgr_rubik_style.scss
/* ... */
.pane-news-test-panel-pane-5,
.pane-articles-test-panel-pane-5,
.pane-press-releases-test-panel-pane-5 {
  .view-content {
    display: flex;
    flex-flow: row wrap;
  }
  .views-row {
    display: inline-block;
    vertical-align: top;
    width: 230px;
    margin-right: 10px;
    margin-bottom: 0.5em;
    flex: 1 240px;
  }
  .views-field-field-featured-image {
    float: left;
    margin-right: 10px;
  }
  .views-field-published-at {
    font-size: 0.8em;
  }
}

/********** OPPA SPANISH STYLE **********/
body.i18n-es {
  .pane-superfish-1 #superfish-1 li a {
    @include breakpoint(680px) {
      font-size: 0.9em;
      padding: 0 5px;
    }
    @include breakpoint(750px) {
      font-size: 0.9em;
      padding: 0 10px;
    }
    @include breakpoint(808px) {
      font-size: 1em;
    }
    @include breakpoint(866px) {
      font-size: 1.1em;
    }
    @include breakpoint(924px) {
      font-size: 1.2em;
    }
    @include breakpoint(1105px) {
      font-size: 0.9em;
      padding: 0 5px;
    }
    @include breakpoint(1126px) {
      padding: 0 10px;
    }
    @include breakpoint(1187px) {
      font-size: 1em;
    }
    @include breakpoint(1268px) {
      font-size: 1.1em;
    }
    @include breakpoint(1348px) {
      font-size: 1.2em;
    }
  }

  #block-panels-mini-header.sticky-header {
    #superfish-1 > li a {
      @include breakpoint(681px) {
        font-size: 1.7vw;
        padding: 0 0.7vw;
      }
      @include breakpoint(1106px) {
        font-size: calc((100vw - 540px)*0.017);
        padding: 0 0.695vw;
      }
      @include breakpoint(1400px) {
        font-size: 14.5px;
        padding: 0 10px;
      }
    }
  }

  .blog-type-page #main-content .panel-myriad-layout .sidebar-content {
    .pane-articles-test-panel-pane-2,
    .pane-news-test-panel-pane-2,
    .pane-press-releases-test-panel-pane-2,
    .pane-articles-test-panel-pane-7,
    .pane-news-test-panel-pane-7,
    .pane-press-releases-test-panel-pane-7 {
      &.boxed {
        padding-top: 56px;
      }
    }
  }
}

